# package-installation-test

./: .gitignore  README.md  pyproject.toml
example_package/: __init__.py  __main__.py
tests/: test_example_package.py  test_package_installation_test.py
