[tool.poetry]
name = "example_package"
version = "1.0.0"
description = ""
authors = ["Karl Knechtel <karl.a.knechtel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
demo-example-package = "example_package:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
